Modificada la ruta de editar para que pueda manejar las imagenes correctamente y editar una por una. Corregido el error en la pagina de edicion que borraba las imagenes previamente cargada. Nueva vista de la misma pagina, con visibilidad y eliminacion sincrónica de las imágenes previamente cargadas. Detalles menores en la pagina de crear

--- a/src/Estilos/crudprop.css
+++ b/src/Estilos/crudprop.css
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.carousel.slide{
+#carrudesl{
     max-width: 250px;
 }
-.carousel-item img {
+#carrruItem img {
     max-height: auto; 
     width: auto; 
   }
-  .carousel-image {
+  #carruImg {
     margin: 10px; 
   }
   .carousel-item {
@@ -73,9 +73,10 @@
 }
 
 #tablaProp {
-  width: 95%;
+  width: 80%;
   border-radius: 10px;
   box-shadow: 5px 5px 10px rgb(197, 191, 191);
+  margin: auto;
 }
 
 .container-prop h1, .propiedad-form h1{
@@ -88,6 +89,7 @@
 #botonCrear {
   background-color: indigo;
   border: none;
+  margin-left: 10%;
 }
 
 #botonCrear:hover {
@@ -97,6 +99,7 @@
 
 .form-label {
   font-weight: bold;
+  font-size: 18px;
 }
 .dobleCampo {
   display: flex;
